--- a/index.html
+++ b/index.html
@@ -22,36 +22,36 @@
 	</header>
 	<main class="team-main">
 		<div class="content-wrapper content">
-			<div class="container">
+			<div class="card-container">
 				<img src="/assets/photo1.png" alt="">
-				<p>Full Name</p>
-				<p>Roll</p>
+				<p class="card-roll">Product ownerl</p>
+				<p class="card-full-name">Bill Mahoney</p>
 			</div>
-			<div class="container">
+			<div class="card-container">
 				<img src="/assets/photo2.png" alt="">
-				<p>Full Name</p>
-				<p>Roll</p>
+				<p class="card-roll">Art director</p>
+				<p class="card-full-name">Saba Cabrera</p>
 			</div>
-			<div class="container">
+			<div class="card-container">
 				<img src="/assets/photo3.png" alt="">
-				<p>Full Name</p>
-				<p>Roll</p>
+				<p class="card-roll">Tech Lead</p>
+				<p class="card-full-name">Shae Le</p>
 			</div>
-			<div class="container">
+			<div class="card-container">
 				<img src="/assets/photo4.png" alt="">
-				<p>Full Name</p>
-				<p>Roll</p>
+				<p class="card-roll">UX Designer</p>
+				<p class="card-full-name">Skylah Lu</p>
 			</div>
-			<div class="container">
+			<div class="card-container">
 				<img src="/assets/photo5.png" alt="">
-				<p>Full Name</p>
-				<p>Roll</p>
+				<p class="card-roll">Developer</p>
+				<p class="card-full-name">Griff Richards</p>
 			</div>
-			<div class="container">
+			<div class="card-container">
 				<img src="/assets/photo6.png" alt="">
-				<p>Full Name</p>
-				<p>Roll</p>
-			</div>
+				<p class="card-roll">Developer</p>
+				<p class="card-full-name">Stan John</p>
+			</div>	
 		</div>
 	</main>
 	<footer>
