--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<div class="card-container">
 				<img src="/assets/photo1.png" alt="">
-				<p class="card-roll">Product ownerl</p>
+				<p class="card-roll">Product owner</p>
 				<p class="card-full-name">Bill Mahoney</p>
 			</div>
 
