Responsive designe en desktop

--- a/index.html
+++ b/index.html
@@ -26,37 +26,37 @@
 
 			<div class="card-container">
 				<img src="/assets/photo1.png" alt="">
-				<p class="card-roll">Product owner</p>
+				<p class="card-roll">PRODUCT OWNER</p>
 				<p class="card-full-name">Bill Mahoney</p>
 			</div>
 
 			<div class="card-container">
 				<img src="/assets/photo2.png" alt="">
-				<p class="card-roll">Art director</p>
+				<p class="card-roll">ART DIRECTOR</p>
 				<p class="card-full-name">Saba Cabrera</p>
 			</div>
 
 			<div class="card-container">
 				<img src="/assets/photo3.png" alt="">
-				<p class="card-roll">Tech Lead</p>
+				<p class="card-roll">TECH LEAD</p>
 				<p class="card-full-name">Shae Le</p>
 			</div>
 
 			<div class="card-container">
 				<img src="/assets/photo4.png" alt="">
-				<p class="card-roll">UX Designer</p>
+				<p class="card-roll">UX DESIGNER</p>
 				<p class="card-full-name">Skylah Lu</p>
 			</div>
 
 			<div class="card-container">
 				<img src="/assets/photo5.png" alt="">
-				<p class="card-roll">Developer</p>
+				<p class="card-roll">DEVELOPER</p>
 				<p class="card-full-name">Griff Richards</p>
 			</div>
 
 			<div class="card-container">
 				<img src="/assets/photo6.png" alt="">
-				<p class="card-roll">Developer</p>
+				<p class="card-roll">DEVELOPER</p>
 				<p class="card-full-name">Stan John</p>
 			</div>
 
